Code of version 1.4 (released in 2008-01-26)

--- a/test/DirSynchTest.properties
+++ b/test/DirSynchTest.properties
@@ -7,37 +7,26 @@ hash.enabled=false
 # NOT IMPLEMENTED YET
 # Hash only small files?
 # Value: [true, false] (default: true)
-#hash.onlysmall=true
+hash.onlysmall=true
 
 # If hashing only small files, what's the max size?
 # Value: integer, size in Kb (default: 256)
 #hash.onlysmall.maxsize=256
 
 # Level of the log: [NONE, ERROR, WARNING, INFO, DEBUG] (default: WARNING)
-#log.level=WARNING
-log.level=INFO
-#log.level=DEBUG
+log.level=DEBUG
 
 # The file to receive log messages.
 # Value: string, path to file (default: ".\DirSynch.log")
-log.file=DirSynch.log
+log.file=DirSynchTest.log
 
 # Initial main dir
 # Value: string, path to main dir
-maindir=P:\\Pessoal\\teste1
+maindir=[teste main dir]
 
 # Initial sec dir
 # Value: string, path to sec dir
-secdir=P:\\Pessoal\\teste2
-
-#maindir=K:\\Ferramentas\\Equipamentos
-#secdir=K:\\temp
-#maindir=P:\\Pessoal\\teste1
-#secdir=P:\\Pessoal\\teste2
-#maindir=Q:\\
-#secdir=P:\\Pessoal\\teste2\\Equipamentos
-#maindir=K:\\Pessoal\\java
-#secdir=I:\\Pessoal\\java
+secdir=[teste sec dir]
 
 # Include all subdirs in the comparison?
 # Value: [true, false] (default: true)
