Code of version 1.5 (released in 2008-05-17)

--- a/DirSynch.properties
+++ b/DirSynch.properties
@@ -13,14 +13,22 @@ hash.enabled=false
 # Value: integer, size in Kb (default: 256)
 #hash.onlysmall.maxsize=256
 
+# Only synchronize times if files have the same hash.
+# Value: [true, false] (default: true)
+synch.times.same.hash=true
+
 # Level of the log: [NONE, ERROR, WARNING, INFO, DEBUG] (default: WARNING)
 #log.level=WARNING
-log.level=INFO
-#log.level=DEBUG
+#log.level=INFO
+log.level=DEBUG
 
 # The file to receive log messages.
 # Value: string, path to file (default: ".\DirSynch.log")
 log.file=DirSynch.log
+
+# Append to the log file or nor (overwrite the old log)
+# Value: [true, false] (default: true)
+log.file.append=true
 
 # Initial main dir
 # Value: string, path to main dir
