--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -20,7 +20,7 @@ jar.compress=false
 javac.classpath=\
     ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:unchecked
 javac.deprecation=true
 javac.source=1.5
 javac.target=1.5
