--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -16,7 +16,7 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/DirSynch.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
