Code of version 1.6alpha5

--- a/DirSynch.properties
+++ b/DirSynch.properties
@@ -18,34 +18,25 @@ hash.enabled=false
 synch.times.same.hash=true
 
 # Level of the log: [NONE, ERROR, WARNING, INFO, DEBUG] (default: WARNING)
-#log.level=WARNING
+log.level=WARNING
 #log.level=INFO
-log.level=DEBUG
+#log.level=DEBUG
 
 # The file to receive log messages.
 # Value: string, path to file (default: ".\DirSynch.log")
 log.file=DirSynch.log
 
-# Append to the log file or nor (overwrite the old log)
+# Append to the log file or not (overwrite the old log)
 # Value: [true, false] (default: true)
 log.file.append=true
 
 # Initial main dir
 # Value: string, path to main dir
-maindir=P:\\Pessoal\\teste1
+maindir=
 
 # Initial sec dir
 # Value: string, path to sec dir
-secdir=P:\\Pessoal\\teste2
-
-#maindir=K:\\Ferramentas\\Equipamentos
-#secdir=K:\\temp
-#maindir=P:\\Pessoal\\teste1
-#secdir=P:\\Pessoal\\teste2
-#maindir=Q:\\
-#secdir=P:\\Pessoal\\teste2\\Equipamentos
-#maindir=K:\\Pessoal\\java
-#secdir=I:\\Pessoal\\java
+secdir=
 
 # Include all subdirs in the comparison?
 # Value: [true, false] (default: true)
