--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,7 @@
 application.args=
+application.homepage=https://dirsynch.dev.java.net
+application.title=DirSynch
+application.vendor=Itamar Carvalho
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -16,14 +19,16 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/DirSynch.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+excludes=
+includes=**
 jar.compress=true
 javac.classpath=\
     ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=true
-javac.source=1.5
-javac.target=1.5
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -39,6 +44,11 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=local
+jnlp.codebase.url=file:/D:/home/itamar/devel/dirsynch/dist/
+jnlp.enabled=false
+jnlp.offline-allowed=false
+jnlp.signed=false
 main.class=itamar.dirsynch.MainJFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
