--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,7 @@
 application.args=
+do.depend=false
+do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Documents and Settings\\Administrator\\.netbeans\\5.5.1\\build.properties
+jaxws.endorsed.dir=C:\\Program Files\\NetBeans 6.1\\java2\\modules\\ext\\jaxws21\\api
+user.properties.file=C:\\Documents and Settings\\Administrator\\.netbeans\\6.1\\build.properties
