--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,8 @@
 application.args=
+compile.on.save=false
 do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-jaxws.endorsed.dir=C:\\Program Files\\NetBeans 6.1\\java2\\modules\\ext\\jaxws21\\api
-user.properties.file=C:\\Documents and Settings\\Administrator\\.netbeans\\6.1\\build.properties
+jaxws.endorsed.dir=C:\\Arquivos de programas\\NetBeans 6.5\\java2\\modules\\ext\\jaxws21\\api:C:\\Arquivos de programas\\NetBeans 6.5\\ide10\\modules\\ext\\jaxb\\api
+user.properties.file=C:\\Documents and Settings\\Itamar\\.netbeans\\6.5\\build.properties
