Code of version 1.6 (released in 2009-09-10)

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,5 +4,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-jaxws.endorsed.dir=C:\\Arquivos de programas\\NetBeans 6.5\\java2\\modules\\ext\\jaxws21\\api:C:\\Arquivos de programas\\NetBeans 6.5\\ide10\\modules\\ext\\jaxb\\api
-user.properties.file=C:\\Documents and Settings\\Itamar\\.netbeans\\6.5\\build.properties
+user.properties.file=C:\\Users\\itamarc\\AppData\\Roaming\\NetBeans\\9.0\\build.properties
