--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,66 +1,64 @@
-application.args=
-application.homepage=https://dirsynch.dev.java.net
-application.title=DirSynch
-application.vendor=Itamar Carvalho
-build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
-build.dir=build
-build.generated.dir=${build.dir}/generated
-# Only compile against the classpath explicitly listed here:
-build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-debug.classpath=\
-    ${run.classpath}
-debug.test.classpath=\
-    ${run.test.classpath}
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/DirSynch.jar
-dist.javadoc.dir=${dist.dir}/javadoc
+#Tue Dec 11 15:30:52 BRST 2018
 excludes=
-includes=**
-jar.compress=true
-javac.classpath=
-# Space-separated list of extra javac options
-javac.compilerargs=-Xlint:unchecked
-javac.deprecation=true
-javac.source=1.6
-javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit.classpath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
+run.classpath=${javac.classpath}\:${build.classes.dir}
+dist.javadoc.dir=${dist.dir}/javadoc
+jnlp.offline-allowed=false
+test.src.dir=test
+run.modulepath=${javac.modulepath}
+jnlp.codebase.type=local
+build.sysclasspath=ignore
+debug.modulepath=${run.modulepath}
+javac.compilerargs=-Xlint\:unchecked
 javadoc.noindex=false
+javadoc.private=false
+javadoc.author=false
+jnlp.codebase.url=file\:/D\:/home/itamar/devel/dirsynch/dist/
+main.class=itamar.dirsynch.MainJFrame
+junit.selected.version=3
+javac.source=1.6
+includes=**
+javadoc.use=true
+jar.compress=true
 javadoc.nonavbar=false
 javadoc.notree=false
-javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
-javadoc.version=false
-javadoc.windowtitle=
-jnlp.codebase.type=local
-jnlp.codebase.url=file:/D:/home/itamar/devel/dirsynch/dist/
-jnlp.enabled=false
-jnlp.offline-allowed=false
+application.homepage=https\://dirsynch.dev.java.net
+javac.deprecation=true
+application.vendor=Itamar Carvalho
+javadoc.additionalparam=
 jnlp.signed=false
-main.class=itamar.dirsynch.MainJFrame
+build.generated.sources.dir=${build.dir}/generated-sources
+javadoc.splitindex=true
+javac.processormodulepath=
+run.jvmargs=
+javadoc.encoding=
+javac.classpath=
+run.test.modulepath=${javac.test.modulepath}
+build.classes.excludes=**/*.java,**/*.form
+dist.jar=${dist.dir}/DirSynch.jar
+build.classes.dir=${build.dir}/classes
+debug.test.modulepath=${run.test.modulepath}
+build.test.classes.dir=${build.dir}/test/classes
+javadoc.windowtitle=
+build.test.results.dir=${build.dir}/test/results
+jnlp.enabled=false
+dist.dir=dist
+build.dir=build
+build.generated.dir=${build.dir}/generated
+javadoc.version=false
+application.args=
+application.title=DirSynch
+javac.test.modulepath=${javac.modulepath}
+debug.test.classpath=${run.test.classpath}
+javac.target=1.6
+platform.active=default_platform
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project
-# (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
-# or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+javac.modulepath=
 src.dir=src
-test.src.dir=test
+debug.classpath=${run.classpath}
