--- a/build.xml
+++ b/build.xml
@@ -74,7 +74,7 @@
             <zipfileset dir="${dist.dir}" includes="DirSynch.jar"/>
             <zipfileset dir="www" includes="DirSynch-help.html"/>
             <zipfileset dir="." includes="DirSynch.properties"/>
-            <zipfileset dir="www" includes="x.gif, v.gif, main-screen-small-1.5.png"/>
+            <zipfileset dir="www" includes="x.gif, v.gif, main-screen-small-1.6.png, toolbar-1.6.png"/>
             <!-- zipfileset dir="${dist.dir}/lib" prefix="lib"/ -->
         </zip>
     </target>
