--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,7 +17,7 @@ jobs:
         # (if not present, uses the 'master' branch)
         # (recomended: use the same branch configured to be used in GH Pages)
         ref: 'gh-pages'
-    - uses: itamarc/action-itemplate-ghpages@v1
+    - uses: itamarc/action-itemplate-ghpages@v1test
       with:
         # The relative path to the folder that contains your site's templates
         # or the identification of the theme you want to use (required)
