--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,6 +2,8 @@ application.args=
 compile.on.save=false
 do.depend=false
 do.jar=true
+do.jlink=false
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\itamarc\\AppData\\Roaming\\NetBeans\\9.0\\build.properties
+jlink.strip=false
+user.properties.file=C:\\Users\\itama\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
