--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,15 +1,30 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
+endorsed.classpath=
 #Tue Dec 11 15:30:52 BRST 2018
 excludes=
+javac.external.vm=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.junit_4.classpath}:\
     ${libs.hamcrest.classpath}
-run.classpath=${javac.classpath}\:${build.classes.dir}
+javadoc.html5=false
+jlink.launcher=false
+jlink.launcher.name=DirSynch
+mkdist.disabled=false
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 dist.javadoc.dir=${dist.dir}/javadoc
 jnlp.offline-allowed=false
 test.src.dir=test
-run.modulepath=${javac.modulepath}
+run.modulepath=\
+    ${javac.modulepath}
 jnlp.codebase.type=local
 build.sysclasspath=ignore
 debug.modulepath=${run.modulepath}
@@ -20,7 +35,7 @@ javadoc.author=false
 jnlp.codebase.url=file\:/D\:/home/itamar/devel/dirsynch/dist/
 main.class=itamar.dirsynch.MainJFrame
 junit.selected.version=3
-javac.source=1.6
+javac.source=1.8
 includes=**
 javadoc.use=true
 jar.compress=true
@@ -37,7 +52,8 @@ javac.processormodulepath=
 run.jvmargs=
 javadoc.encoding=
 javac.classpath=
-run.test.modulepath=${javac.test.modulepath}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 build.classes.excludes=**/*.java,**/*.form
 dist.jar=${dist.dir}/DirSynch.jar
 build.classes.dir=${build.dir}/classes
@@ -52,13 +68,16 @@ build.generated.dir=${build.dir}/generated
 javadoc.version=false
 application.args=
 application.title=DirSynch
-javac.test.modulepath=${javac.modulepath}
+javac.test.modulepath=\
+    ${javac.modulepath}
 debug.test.classpath=${run.test.classpath}
-javac.target=1.6
+javac.target=1.8
 platform.active=default_platform
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 javac.modulepath=
 src.dir=src
 debug.classpath=${run.classpath}
