--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,9 +2,12 @@ annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 endorsed.classpath=
 #Tue Dec 11 15:30:52 BRST 2018
 excludes=
+jar.archive.disabled=${jnlp.enabled}
+jar.index=${jnlp.enabled}
 javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
@@ -16,7 +19,21 @@ javac.test.classpath=\
 javadoc.html5=false
 jlink.launcher=false
 jlink.launcher.name=DirSynch
+jnlp.descriptor=application
+jnlp.mixed.code=default
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 mkdist.disabled=false
+project.license=gpl30
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -41,7 +58,7 @@ javadoc.use=true
 jar.compress=true
 javadoc.nonavbar=false
 javadoc.notree=false
-application.homepage=https\://dirsynch.dev.java.net
+application.homepage=https://itamarc.github.io/dirsynch/
 javac.deprecation=true
 application.vendor=Itamar Carvalho
 javadoc.additionalparam=
