--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -8,7 +8,22 @@ on:
       - created
   workflow_dispatch:
 jobs:
-  deploy:
+  update-docs-on-gh-pages-branch:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+      - name: Copy To Branches Action
+        uses: planetoftheweb/copy-to-branches@v1
+        env:
+          # The branch where the files will be copied from
+          key: master
+          # The destination branch
+          branches: gh-pages
+          # The files that will be copied
+          files: README.md www/DirSynch-help.html
+  deploy-pages:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
