Refactoring: main method is now in App class

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.itamarc</groupId>
     <artifactId>dirsynch</artifactId>
-    <version>1.6.1</version>
+    <version>1.7-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>DirSynch</name>
     <description>DirSynch is a tool to synchronize directory contents.</description>
@@ -46,7 +46,7 @@
                     <finalName>DirSynch</finalName>
                     <archive>
                         <manifest>
-                            <mainClass>itamar.dirsynch.MainJFrame</mainClass>
+                            <mainClass>itamar.dirsynch.App</mainClass>
                         </manifest>
                     </archive>
                     <excludes>
